# media_ratings_to_discord

./: .gitignore  .pre-commit-config.yaml  README.md  config.json  config.py  config.template.json  letterboxd.py  pyproject.toml  requirements.txt  run.sh  tmdb.py  trakt.py  webhook_gen.py
