[project]
name = "media-ratings-to-discord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "feedparser",
    "html-to-markdown>=2.19.5",
    "html2text",
    "pandas",
    "requests",
]

[tool.ruff.lint]
extend-select = ["I"]
